--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-clean-plugin</artifactId>
+  <version>3.1.0</version>
+  <type>maven-plugin</type>
+</dependency>
   </dependencies>
   <build>
     <plugins>
